# goit-ds-hw-01

./: Dockerfile  LICENSE  README.md  hw.py  pyproject.toml
