[project]
name = "personal-assistant"
version = "0.1.0"
description = "Working with address book"
authors = [
    {name = "Serg Kalynychenko",email = "kalinasergey911@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
